--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,6 +1,14 @@
+font-family = Fira Code SemiBold
+font-size = 14
+
+theme = Catppuccin Mocha
 macos-titlebar-style = hidden
 background-opacity = 0.95
 background-blur = true
 window-padding-x = 10
 window-padding-y = 10
+
+initial-command = zsh -c 'tmux new -As default'
+confirm-close-surface = false
+quit-after-last-window-closed = true
 
