swapping of panes in tmux

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -3,17 +3,23 @@ set -g base-index 1
 set -w -g pane-base-index 1
 
 # use vim keys for movement
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
 set -g mode-keys vi
 
+# pane swapping
+bind -r H swap-pane -t '.{left-of}'
+bind -r J swap-pane -t '.{up-of}'
+bind -r K swap-pane -t '.{down-of}'
+bind -r L swap-pane -t '.{right-of}'
+
 # use vim keys for resize
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind -r C-h resize-pane -L 5
+bind -r C-j resize-pane -D 5
+bind -r C-k resize-pane -U 5
+bind -r C-l resize-pane -R 5
 
 # use system clipboard
 set -g set-clipboard external
@@ -35,3 +41,4 @@ set -g status-left " #[fg=#89b4fa]󰆍 #[fg=#a6adc8]#S"
 set -g window-status-format "#[fg=#6c7086] #I:#W "
 set -g window-status-current-format "#[fg=#89b4fa,bold]▎#I:#W ▎"
 set -g status-format[1] ""
+
